--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ table {
 
     width: 150px;
     position: absolute;
+    text-align: center;
     top: 50%;
     left: 50%;
     margin: 0 0 0 -90px;
@@ -56,9 +57,6 @@ table {
     z-index: 1;
 }
 
-.start p {
-    text-align: center;
-}
 
 .start:hover {
     cursor: pointer;
@@ -75,19 +73,15 @@ table {
 }
 
 .car, .enemy {
+    position: absolute; 
     width: 50px;
     height: 100px;
-    background: transparent url('./image/Mitsubishi.png') center / cover no-repeat;
-    position: absolute;
-    left: 125px;
-    bottom: 10px;
-    
+    background: transparent url('./image/Mitsubishi.png') center /cover no-repeat;  
 }
 
 .gameArea {
     display: none;
     width: 300px;
-    height: 600px;
     height: 100vh;
     position: relative;
     margin: auto;
@@ -95,10 +89,26 @@ table {
     overflow: hidden;
 }
 
+
 .line {
     position: absolute;
     width: 10px;
     height: 50px;
     background: white;
     left: 145px;
+}
+
+.score {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: black;
+    width: 100%;
+    padding: 1rem 0;
+    z-index: 10;
+    color: white;
+    text-align: center;
+    font-family: sans-serif;
+    font-weight: 500;
 }
